--- a/authentication-authorization/Authentication/Authentication.Core/Authentication.Core.csproj
+++ b/authentication-authorization/Authentication/Authentication.Core/Authentication.Core.csproj
@@ -6,7 +6,9 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.0.0" />
+      <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.16.0" />
       <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
+      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.16.0" />
     </ItemGroup>
 
 </Project>
